@@ -191,8 +191,13 @@ server, see section \ref{sessions} \\
 
 \hline
 
+\texttt{USER\_AGENT} & the \texttt{User-Agent} request header sent by
+the client (not in the widget registry) \\
+
+\hline
+
 \texttt{LANGUAGE} & the \texttt{Accept-Language} request header sent
-by the client (not applicable to the widget registry) \\
+by the client (not in the widget registry) \\
 
 \hline
 
