@@ -147,6 +147,8 @@ marshal_request(pool_t pool, const struct translate_request *request)
         write_packet(gb, TRANSLATE_REMOTE_HOST, request->remote_host);
     if (request->host != NULL)
         write_packet(gb, TRANSLATE_HOST, request->host);
+    if (request->user_agent != NULL)
+        write_packet(gb, TRANSLATE_USER_AGENT, request->user_agent);
     if (request->accept_language != NULL)
         write_packet(gb, TRANSLATE_LANGUAGE, request->accept_language);
     if (request->uri != NULL)
@@ -367,6 +369,7 @@ translate_handle_packet(struct translate_client *client,
     case TRANSLATE_PARAM:
     case TRANSLATE_REMOTE_HOST:
     case TRANSLATE_WIDGET_TYPE:
+    case TRANSLATE_USER_AGENT:
         daemon_log(2, "misplaced translate request packet\n");
         break;
 
